@@ -41,6 +41,9 @@ Don't daemonize mpdscribble, run it in foreground.
 .B \-\-pidfile FILE
 Write the process id to this file.
 .TP
+.B \-\-daemon-user USERNAME
+Change to this system user after daemonization.
+.TP
 .B \-\-log FILE
 Specify log file. /var/log/mpdscribble/mpdscribble.log is used by default.
 The special value "syslog" makes mpdscribble use the local syslog
