@@ -13,6 +13,9 @@ password =
 # The location of the pid file.  mpdscribble saves its process id there.
 #pidfile = /var/run/mpdscribble.pid
 
+# Change to this system user after daemonization.
+#daemon_user = mpdscribble
+
 # The location of the mpdscribble log file.  The special value
 # "syslog" makes mpdscribble use the local syslog daemon.  On most
 # systems, log messages will appear in /var/log/daemon.log then.
