@@ -199,6 +199,7 @@ load_config_file(const char *path)
 		g_error("%s\n", error->message);
 
 	load_string(file, "pidfile", &file_config.pidfile);
+	load_string(file, "daemon_user", &file_config.daemon_user);
 	load_string(file, "username", &file_config.username);
 	load_string(file, "password", &file_config.password);
 	load_string(file, "log", &file_config.log);
