@@ -1,4 +1,6 @@
 mpdscribble 0.17 - not yet released
+  * secure permissions for mpdscribble.conf
+  * added "daemon_user" configuration option
 
 
 mpdscribble 0.16 - 2009-01-17
